# Desk-Pet

./: .gitignore  README.md
ESP-Firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP-Firmware/main/: CMakeLists.txt  camera.c  http.c  main.c  wifi.c
ESP-Firmware/main/include/: camera.h  wifi.h
ESP-Firmware/main/static/: compress_pages.sh  script.js  style.css  wifi_config.html
ESP32-FRW/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
ESP32-FRW/main/: CMakeLists.txt  DESKPET_VISION_MODULE.c  Kconfig.projbuild  camera.c  uart.c  vm_http.c  vm_wifi.c
ESP32-FRW/main/include/: camera.h  commands.h  http.h  uart.h  vm_http.h  vm_wifi.h
ESP32-FRW/main/static/: communication.js  compress_pages.sh  index.html  joystick.js  json_example.json  script.js  style.css  utils.js  wifi_config.html
Firmware/: platformio.ini
Firmware/src/: main.cpp
Interface/: custom-image-classificator.html  custom-object-detector.html  desk-pet-interface.html  deskp-pet-interface.html  example.html  example2.html  manifest.json  test.html  wifi-manager-test.html
Interface-SFW/: desk-pet-interface.html  gui.html  tflite_web_api_cc_simd.js
Interface-SFW/css/: style.css
Interface-SFW/js/: AI.js  communication.js  model.js  script.js  script_original.js  utils.js
Interface-SFW/models/: face-api.js
Interface-SFW/tests/: custom-object-detector.html  wifi-manager-test.html
RP2040-FRW/: config.py  kinematics.py  lss.py  main.py  movement.py  utils.py
RP2040-FRW/data/: internal_config.json
RP2040-FRW/examples/: main_calibration.py  main_example_peripherals.py  main_joint_control.py  main_peripherals.py  main_static_moves.py  main_walking_rot.py
RP2040-FRW/lib/: lss.py  lss_const.py
RP2040-FRW/src/: api.py  constants.py  esp_uart.py  kinematics.py  peripherals.py  (+1 more)
RP2040_Firmware/: main.py  movement.py
test_quadruped/: index.html  test_quadruped.js
(+22 files in other folders)
